--- a/translations/en.json
+++ b/translations/en.json
@@ -218,5 +218,16 @@
     "back": "Back",
     "next": "Next",
     "select": " Please Select"
+  },
+  "error_ser": {
+    "607": "Machine Over Limit",
+    "608": "Un Register Machine",
+    "609": "User ID Not Found Or Wrong",
+    "500": "Internal Server Error",
+    "605": "Invalid Service ID",
+    "610": "Not Login",
+    "614": "Table Name Not Found",
+    "617": "No License Or License Expire",
+    "629": "Function Parameter Required "
   }
 }
