--- a/translations/th.json
+++ b/translations/th.json
@@ -218,5 +218,16 @@
     "back": "กลับ",
     "next": "ถัดไป",
     "select": "โปรดระบุ"
+  },
+  "error_ser": {
+    "607": "เครื่องเกินขีดจำกัด",
+    "608": "เครื่องของคุณยังไม่ถูกลงทะเบียน",
+    "609": "บัญชีผู้ใช้ หรือ รหัสผ่านไม่ถูกต้อง",
+    "500": "ข้อผิดพลาดเซิร์ฟเวอร์ภายใน",
+    "605": "รหัสบริการไม่ถูกต้อง",
+    "610": "เซสชันของคุณหมดอายุ",
+    "614": "ไม่พบชื่อตาราง",
+    "617": "ไม่มีใบอนุญาตหรือใบอนุญาตหมดอายุ",
+    "629": "จำเป็นต้องมีพารามิเตอร์ฟังก์ชัน"
   }
 }
